Add shrimp recepie

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
             <li><a href="recepies/lasagna.html">Lasagna</a></li>
             <li><a href="recepies/steak.html">Steak</a></li>
+            <li><a href="recepies/shrimp.html">Shrimp</a></li>
         </ul>    
 
     </body>
