add img, add elements

--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title></title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Odin  Recepies</h1>
+        <div>
+            <img src="images/firepan.jpg">
+        </div>
         
         <ul>
-            <li><a href="recepies/lasagna.html">Lasagna</a></li>
-            <li><a href="recepies/steak.html">Steak</a></li>
-            <li><a href="recepies/shrimp.html">Shrimp</a></li>
+            <p><button class="buttons"><a href="recepies/lasagna.html">Lasagna</a></button></p>
+            <p><button class="buttons"><a href="recepies/steak.html">Steak</a></button></p>
+            <p><button class="buttons"><a href="recepies/shrimp.html">Shrimp</a></button></p>
         </ul>    
 
     </body>
